--- a/Energy_consumption_at_houses.ipynb
+++ b/Energy_consumption_at_houses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "id": "4ba0a64a",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "id": "7c4166ba",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "4           15.800          0.000          1.000            17.0  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "id": "3af5a895",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "id": "63e5b7b4",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
        "max      3.100000e+01"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "id": "6a48e330",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "id": "ab74e00b",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "id": "72d3866f",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "id": "95195c69",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "4          0.000          1.000            17.0 2006-12-16 17:28:00  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "id": "7d7a4b4f",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "id": "8c415b48",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "id": "d4dc1468",
    "metadata": {},
    "outputs": [],
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "id": "b54977ba",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "id": "7f121aea",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "id": "cafc898d",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "id": "300f629b",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "id": "8a66a39c",
    "metadata": {},
    "outputs": [
@@ -625,7 +625,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "id": "123b0cea",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
        "(2075259, 8)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "id": "b0b21b49",
    "metadata": {},
    "outputs": [],
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "id": "15679a4b",
    "metadata": {},
    "outputs": [
@@ -792,7 +792,7 @@
        "2006-12-16 21:00:00       17.216667  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "id": "7b707ff0",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 21,
    "id": "b8684119",
    "metadata": {},
    "outputs": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 22,
    "id": "9be09c75",
    "metadata": {},
    "outputs": [
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 23,
    "id": "2b95c723",
    "metadata": {},
    "outputs": [
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 24,
    "id": "bf9af84c",
    "metadata": {},
    "outputs": [
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 25,
    "id": "5cd7282b",
    "metadata": {},
    "outputs": [
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 26,
    "id": "b4533f67",
    "metadata": {},
    "outputs": [
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 27,
    "id": "f2745e4e",
    "metadata": {},
    "outputs": [],
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 28,
    "id": "5c4d279e",
    "metadata": {},
    "outputs": [],
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 29,
    "id": "ed8cdc6f",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1102,7 @@
        "2006-12-16 17:28:00            17.0  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 30,
    "id": "32c36fe0",
    "metadata": {},
    "outputs": [],
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 31,
    "id": "23da385d",
    "metadata": {},
    "outputs": [],
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 32,
    "id": "8bc8dc0e",
    "metadata": {},
    "outputs": [],
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 33,
    "id": "4ba2f0da",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 34,
    "id": "007a4704",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1306,7 @@
        "2010-11-26 21:02:00           0  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 35,
    "id": "88b126ae",
    "metadata": {},
    "outputs": [],
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 36,
    "id": "56516b00",
    "metadata": {},
    "outputs": [],
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 37,
    "id": "2584fe7b",
    "metadata": {},
    "outputs": [
@@ -1556,7 +1556,7 @@
        "[2075259 rows x 9 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 38,
    "id": "1985121b",
    "metadata": {},
    "outputs": [
@@ -1698,7 +1698,7 @@
        "2010-11-26 21:02:00   26            4     11  2010           0  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 39,
    "id": "bb7a7932",
    "metadata": {},
    "outputs": [
@@ -1721,7 +1721,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 40,
    "id": "718693f1",
    "metadata": {},
    "outputs": [],
@@ -1744,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 41,
    "id": "3845a9f2",
    "metadata": {},
    "outputs": [
@@ -1766,7 +1766,7 @@
        "         1.3851639 , -0.63193653]], shape=(2075259, 9))"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1777,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 42,
    "id": "07d5e2af",
    "metadata": {},
    "outputs": [
@@ -1799,7 +1799,7 @@
        "Name: Global_active_power, Length: 2075259, dtype: float64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 43,
    "id": "0c4a267a",
    "metadata": {},
    "outputs": [
@@ -1831,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 44,
    "id": "3b40c1f2",
    "metadata": {},
    "outputs": [
@@ -1841,7 +1841,7 @@
        "(2075259, 10)"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1852,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 45,
    "id": "2a96b30f",
    "metadata": {},
    "outputs": [
@@ -1862,7 +1862,7 @@
        "(34589, 4)"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1873,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 46,
    "id": "56145b90",
    "metadata": {},
    "outputs": [],
@@ -1883,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 47,
    "id": "f7f84f62",
    "metadata": {},
    "outputs": [
@@ -2036,7 +2036,7 @@
        "[34589 rows x 4 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2047,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 48,
    "id": "e2586b97",
    "metadata": {},
    "outputs": [],
@@ -2060,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 49,
    "id": "7469397c",
    "metadata": {},
    "outputs": [
@@ -2265,7 +2265,7 @@
        "[34589 rows x 8 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2276,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 50,
    "id": "413984f2",
    "metadata": {},
    "outputs": [],
@@ -2288,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 51,
    "id": "6054cc8d",
    "metadata": {},
    "outputs": [],
@@ -2304,7 +2304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 52,
    "id": "9ea5997e",
    "metadata": {},
    "outputs": [
@@ -2348,6 +2348,36 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "78df3de9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved model and feature list to models/rf_model_with_features.pkl\n",
+      "Feature order: ['Global_reactive_power', 'Voltage', 'Sub_metering_3', 'hour', 'day_of_week', 'month', 'is_weekend']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os, joblib\n",
+    "\n",
+    "# FEATURES used to train the model (these come from your df in training)\n",
+    "# In your script X = df.drop(columns=[target]) so this is:\n",
+    "features = X.columns.tolist()   # X is the DataFrame used for training (before iloc split)\n",
+    "\n",
+    "# Save the model and the expected feature list together\n",
+    "os.makedirs(\"models\", exist_ok=True)\n",
+    "save_obj = {\"model\": rf, \"features\": features}\n",
+    "joblib.dump(save_obj, \"models/rf_model_with_features.pkl\")\n",
+    "print(\"Saved model and feature list to models/rf_model_with_features.pkl\")\n",
+    "print(\"Feature order:\", features)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5581416",
    "metadata": {},
    "outputs": [],
    "source": []
